--- a/PolynomialRegression/PolynomialRegression.vcxproj
+++ b/PolynomialRegression/PolynomialRegression.vcxproj
@@ -116,11 +116,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="PolynomialRegression.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Vector2\Vector\Vector.h" />
     <ClInclude Include="PolynomialRegression.h" />
-    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
